Fix broken styles

--- a/themes/mosaic/scss/components/_footer.scss
+++ b/themes/mosaic/scss/components/_footer.scss
@@ -1,60 +1,46 @@
 #footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
     background-color: #3c4147;
     color: white;
-    height: 15rem;
     display: flex;
-  }
-  
-  #investing {
+}
+
+#investing {
     height: 100%;
     width: 25%;
     float: left;
-  }
-  
-  #investing img {
+}
+
+#investing img {
     width: 500px;
     height: 200px;
     object-fit: cover;
-  }
-  
-  #logo {
+}
+
+#logo {
     height: 100%;
     width: 15%;
-  }
-  
-  #logo img {
+}
+
+#logo img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 90%;
-  }
-  
-  
-  #disclaimer {
-    position: absolute;
+}
+
+#disclaimer {
     float: right;
-    left: 40%;
-    right: 2%;
-    height: 100%;
     width: 60%;
-  }
-  
-  #disclaimer p {
+}
+
+#disclaimer p {
     column-count: 2;
     text-align: center;
     padding: 1rem 1.5rem 1rem 1rem;
-    position: relative;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-  }
-  
-  .selectpicker {
+}
+
+.selectpicker {
     position: relative;
     float: right;
     left: 20%;
-  }
+}
