--- a/themes/mosaic/scss/components/_grid.scss
+++ b/themes/mosaic/scss/components/_grid.scss
@@ -1,23 +1,17 @@
 .grid {
     &__row {
-        display:grid;
+        display: grid;
         grid-template-columns: 6% 15% 15% 7% 7% 17% 11% 11% 11%;
         padding: 0.5rem;
         padding-block: 0.25rem;
-        background-color: $body-bg;
     }
-    &__header {
-      display:grid;
-      grid-template-columns: 6% 15% 15% 7% 7% 17% 11% 11% 11%;
-      padding: 0.5rem;
-      padding-bottom:0.25rem;
-      background-color: $body-bg;
-    }
+
     &__item {
-        height: 100%;
         background-color: green;
-        margin:0.25rem;
+        margin-left: 0.25rem;
+        margin-right: 0.25rem;
     }
+
     &__head {
         background-color: $heading-colour;
         border-color: $heading-darker;
@@ -27,117 +21,37 @@
             background-color: $heading-darker;
         }
     }
+
     &__blank {
         grid-column: span 3;
     }
+
     &__text {
         margin: 0.5rem;
-        color:black;
+        color: black;
     }
 }
 
-* {
-  font-family: sans-serif;
-  font-size: small;
-}
-body {
-  overflow: hidden;
-  /* Hide scrollbars */
-  margin: 0;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  text-align: center;
-  font-family: sans-serif;
-  font-weight: 500;
-  line-height: 1.2;
-  margin: 0;
-}
-
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 5% 16% 16% 7% 7% 16% 11% 11% 11%;
-  grid-gap: 0.5rem;
-  padding: 5rem;
-  background-color: $body-bg;
-}
-
-.grid-item {
-  background-color: green;
-
-}
-
-.grid-head {
-  background-color: #e8e8f4;
-  border-color: #999ca5;
-  border-style: solid;
-  border-width: 1px;
-}
-
-.grid-head:hover {
-  background-color: #999ca5;
-}
-
-.grid-blank {
-  grid-column: span 3;
-}
-
-.grid-text {
-  margin: 0.5rem;
-  color: $body-colour;
-}
-
 #date-picker {
-  grid-column: span 2;
-  text-align: left;
+    grid-column: span 2;
+    text-align: left;
 }
 
 #country-picker {
-  grid-column: span 2;
-  background-color: #00000000;
-  border-style: none;
+    grid-column: span 2;
+    background-color: #00000000;
+    border-style: none;
 }
 
-#country-picker-button{
-  width:auto;
-  align-self: center;
+#country-picker-button {
+    width: auto;
+    align-self: center;
 }
 
 #download {
-  grid-column: span 2;
+    grid-column: span 2;
 }
 
-.center {
-  text-align: center;
-  background-color: $body-bg;
-  border-bottom: 2px solid green;
-  position: absolute;
-  bottom: 15rem;
-  width: 100%;
-  height: 5%;
+#history {
+    padding: 0.5rem;
 }
-
-.pagination {
-  display: inline-block;
-}
-
-.pagination a {
-  vertical-align: middle;
-  font-size: large;
-  font-weight: 600;
-  color: white;
-  float: left;
-  padding: 8px 16px;
-  text-decoration: none;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-}
-
-html{background-color: $body-bg;}
