--- a/themes/mosaic/scss/components/_header.scss
+++ b/themes/mosaic/scss/components/_header.scss
@@ -1,9 +1,4 @@
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1;
     background-color: $header-bg;
 
     &__link {
